refactor: ViewModel의 addressLine uiState로 이동, trackingModeAction 삭제

--- a/android/app/src/main/res/layout/fragment_playground.xml
+++ b/android/app/src/main/res/layout/fragment_playground.xml
@@ -258,7 +258,6 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_register_marker"
-            registeringPlaygroundAnimation="@{vm.uiState}"
             android:layout_width="match_parent"
             android:layout_height="208dp"
             android:layout_margin="12dp"
@@ -287,7 +286,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="10dp"
-                android:text="@{vm.addressLine}"
+                addressText="@{vm.uiState}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_register_walk_area"
