--- a/android/app/src/main/res/layout/fragment_playground.xml
+++ b/android/app/src/main/res/layout/fragment_playground.xml
@@ -24,8 +24,8 @@
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/layout_playground_info"
+            playgroundInfoUiState="@{vm.uiState}"
             playgroundInfoVisibility="@{vm.playgroundInfo}"
-            uiState="@{vm.uiState}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="invisible"
@@ -73,9 +73,9 @@
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <TextView
-            android:id="@+id/btn_woof_footprint_refresh"
+            android:id="@+id/btn_woof_playground_refresh"
             style="@style/Theme.AppCompat.TextView.SemiBold.Coral400.Size14"
-            uiState="@{vm.uiState}"
+            refreshBtnUiState="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -178,7 +178,7 @@
         <ImageButton
             android:id="@+id/btn_playground_pet_existence"
             btnMargin="@{vm.myPlayground}"
-            uiState="@{vm.uiState}"
+            petExistenceBtnUiState="@{vm.uiState}"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginEnd="12dp"
@@ -292,10 +292,9 @@
                 tools:text="서울 송파구 올림픽로35다길 42서울 송파구 올림픽로35다길 42" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_woof_register_footprint"
+                android:id="@+id/btn_playground_register"
                 style="@style/Theme.AppCompat.TextView.SemiBold.White.Size20"
-                cameraIdle="@{vm.playgroundRegisterBtn.cameraIdle}"
-                uiState="@{vm.uiState}"
+                registerPlaygroundBtnUiState="@{vm.uiState}"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
                 android:layout_marginHorizontal="14dp"
