refactor: Message -> StateMessage로 클래스명 변경

--- a/android/app/src/main/res/layout/activity_message.xml
+++ b/android/app/src/main/res/layout/activity_message.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="vm"
-            type="com.happy.friendogly.presentation.ui.message.viewmodel.MessageViewModel" />
+            type="com.happy.friendogly.presentation.ui.statemessage.viewmodel.StateViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
