refactor: Loading 상태 수정

--- a/android/app/src/main/res/layout/fragment_playground.xml
+++ b/android/app/src/main/res/layout/fragment_playground.xml
@@ -18,19 +18,16 @@
         <com.naver.maps.map.MapView
             android:id="@+id/map_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="0dp" />
+            android:layout_height="match_parent" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/layout_playground_info"
             playgroundInfoUiState="@{vm.uiState}"
-            playgroundInfoVisibility="@{vm.playgroundInfo}"
+            playgroundInfoVisibility="@{vm.myPlayStatus}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:visibility="visible">
+            tools:visibility="gone">
 
             <LinearLayout
                 android:id="@+id/bottom_sheet_playground"
@@ -208,12 +205,11 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_playground_register_location"
-            registerLocationBtnVisibility="@{vm.uiState}"
+            registeringPlaygroundVisibility="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="12dp"
-            android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@id/layout_playground_register_marker"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -227,16 +223,14 @@
 
         <FrameLayout
             android:id="@+id/btn_playground_register_location"
-            registerLocationBtnVisibility="@{vm.uiState}"
+            registeringPlaygroundVisibility="@{vm.uiState}"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="12dp"
             android:onClick="@{() -> vm.clickLocationBtn()}"
-            android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@id/layout_playground_register_marker"
             app:layout_constraintStart_toStartOf="parent" />
-
 
         <ImageButton
             android:id="@+id/btn_playground_registering_help"
@@ -265,7 +259,7 @@
             android:paddingHorizontal="6dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:visibility="gone">
+            tools:visibility="visible">
 
             <TextView
                 android:id="@+id/tv_playground_register"
