--- a/android/app/src/main/res/layout/fragment_playground.xml
+++ b/android/app/src/main/res/layout/fragment_playground.xml
@@ -20,73 +20,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:id="@+id/layout_playground_info"
-            playgroundInfoUiState="@{vm.uiState}"
-            playgroundInfoVisibility="@{vm.myPlayStatus}"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:visibility="visible">
-
-            <LinearLayout
-                android:id="@+id/bottom_sheet_playground"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rect_white_fill_20"
-                android:elevation="10dp"
-                android:orientation="vertical"
-                android:paddingHorizontal="14dp"
-                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <ImageView
-                        android:id="@+id/btn_playground_info_refresh"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:padding="4dp"
-                        android:onClick="@{() -> vm.clickPlaygroundInfoRefreshBtn(vm.myPlayground.id)}"
-                        android:clickable="true"
-                        android:src="@drawable/ic_refresh_gray"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rcv_playground_pet"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:itemCount="3"
-                    tools:listitem="@layout/item_playground_pet_detail" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_playground"
-                    style="@style/Theme.AppCompat.TextView.SemiBold.White.Size20"
-                    playgroundAction="@{vm}"
-                    playgroundBtn="@{vm.myPlayground}"
-                    playgroundBtnVisibility="@{vm.playgroundInfo}"
-                    playgroundId="@{vm.playgroundInfo.id}"
-                    android:layout_width="match_parent"
-                    android:layout_height="56dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginBottom="32dp"
-                    android:background="@drawable/rect_coral400_fill_16"
-                    android:visibility="gone"
-                    tools:visibility="visible" />
-            </LinearLayout>
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
         <TextView
             android:id="@+id/btn_playground_refresh"
             style="@style/Theme.AppCompat.TextView.SemiBold.Coral400.Size14"
@@ -144,7 +77,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_playground_location"
-            btnMargin="@{vm.myPlayground}"
+            btnMargin="@{vm.myPlayStatus}"
             playgroundLocationBtnVisibility="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -163,7 +96,7 @@
 
         <FrameLayout
             android:id="@+id/btn_playground_location"
-            btnMargin="@{vm.myPlayground}"
+            btnMargin="@{vm.myPlayStatus}"
             playgroundLocationBtnVisibility="@{vm.uiState}"
             android:layout_width="48dp"
             android:layout_height="48dp"
@@ -192,7 +125,7 @@
 
         <ImageButton
             android:id="@+id/btn_playground_pet_existence"
-            btnMargin="@{vm.myPlayground}"
+            btnMargin="@{vm.myPlayStatus}"
             petExistenceBtnUiState="@{vm.uiState}"
             android:layout_width="80dp"
             android:layout_height="80dp"
@@ -431,6 +364,72 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/layout_playground_info"
+            playgroundInfoUiState="@{vm.uiState}"
+            playgroundInfoVisibility="@{vm.myPlayStatus}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:visibility="visible">
+
+            <LinearLayout
+                android:id="@+id/bottom_sheet_playground"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rect_white_fill_20"
+                android:elevation="10dp"
+                android:orientation="vertical"
+                android:paddingHorizontal="14dp"
+                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/btn_playground_info_refresh"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:padding="4dp"
+                        android:onClick="@{() -> vm.clickPlaygroundInfoRefreshBtn(vm.myPlayground.id)}"
+                        android:clickable="true"
+                        android:src="@drawable/ic_refresh_gray"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcv_playground_pet"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:itemCount="3"
+                    tools:listitem="@layout/item_playground_pet_detail" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_playground"
+                    style="@style/Theme.AppCompat.TextView.SemiBold.White.Size20"
+                    playgroundAction="@{vm}"
+                    playgroundBtn="@{vm.myPlayground}"
+                    playgroundBtnVisibility="@{vm.uiState}"
+                    playgroundId="@{vm.playgroundInfo.id}"
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginBottom="32dp"
+                    android:background="@drawable/rect_coral400_fill_16"
+                    tools:visibility="visible" />
+            </LinearLayout>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <FrameLayout
             android:id="@+id/layout_playground_loading"
