feat: 방장 프로필 이동 구현

--- a/android/app/src/main/res/layout/activity_club_detail.xml
+++ b/android/app/src/main/res/layout/activity_club_detail.xml
@@ -46,6 +46,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <View
+                    onSingleClick="@{() -> vm.openUserDetail()}"
                     android:id="@+id/view_club_detail_user_top_bar"
                     android:layout_width="match_parent"
                     android:layout_height="68dp"
