--- a/android/app/src/main/res/layout/activity_club_detail.xml
+++ b/android/app/src/main/res/layout/activity_club_detail.xml
@@ -128,6 +128,7 @@
                     android:layout_height="48dp"
                     android:layout_margin="10dp"
                     app:selectModifyStateBackground="@{vm.club.clubState}"
+                    app:detailViewClubModifyVisible="@{vm.club.clubDetailViewType}"
                     android:background="@drawable/rect_coral300_fill_20"
                     app:layout_constraintBottom_toTopOf="@+id/rcv_club_detail_filter_list"
                     app:layout_constraintStart_toStartOf="parent"
